--- a/notebooks/02-local-QARTOD-test.ipynb
+++ b/notebooks/02-local-QARTOD-test.ipynb
@@ -48,7 +48,8 @@
     "import dask\n",
     "from dask.diagnostics import ProgressBar\n",
     "\n",
-    "from qartod_testing.data_processing import qartod_gross_range_test, timeseries_dict_to_xarray, qartod_climatology_test, build_data_path"
+    "from qartod_testing.qc_flag_statistic import timeseries_dict_to_xarray, build_data_path\n",
+    "from qartod_testing.local_qc_test import qartod_gross_range_test, qartod_climatology_test"
    ]
   },
   {
