--- a/notebooks/04- Climatology-comparison-statistics.ipynb
+++ b/notebooks/04- Climatology-comparison-statistics.ipynb
@@ -48,7 +48,8 @@
    "outputs": [],
    "source": [
     "# Import OOI-related modules\n",
-    "from qartod_testing.data_processing import get_test_parameters, get_mismatched_flags, qartod_summary_expanded, parse_qartod_executed\n",
+    "from qartod_testing.qc_flag_statistics import get_test_parameters, qartod_summary_expanded, parse_qartod_executed\n",
+    "from qartod_testing.local_qc_test import get_mismatched_flags\n",
     "from ooi_data_explorations.common import merge_frames"
    ]
   },
