--- a/notebooks/05-Check-mismatched-sea_water_temperature.ipynb
+++ b/notebooks/05-Check-mismatched-sea_water_temperature.ipynb
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "# Import local project functions\n",
-    "from qartod_testing.data_processing import load_climatology_qartod_test_values"
+    "from qartod_testing.local_qc_test import load_climatology_qartod_test_values"
    ]
   },
   {
