--- a/notebooks/07-Generate-Statistics-CSVs.ipynb
+++ b/notebooks/07-Generate-Statistics-CSVs.ipynb
@@ -39,7 +39,7 @@
     "from dask.diagnostics import ProgressBar\n",
     "\n",
     "# Import qartod_testing project functions\n",
-    "from qartod_testing.data_processing import ooinet_gold_copy_request, get_test_parameters, parse_qartod_executed, qartod_summary_expanded\n",
+    "from qartod_testing.qc_flag_statistics import ooinet_gold_copy_request, get_test_parameters, parse_qartod_executed, qartod_summary_expanded\n",
     "\n",
     "# Import OOI library functions\n",
     "from ooi_data_explorations.common import merge_frames\n",
@@ -76,7 +76,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading and Processing Data Files: 100%|██████████| 13/13 [00:10<00:00,  1.19it/s]\n"
+      "Downloading and Processing Data Files: 100%|██████████| 13/13 [00:17<00:00,  1.34s/it]\n"
      ]
     }
    ],
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "9c8f9b64-92c1-4610-b20c-2e193f1d5755",
    "metadata": {},
    "outputs": [
@@ -1122,7 +1122,7 @@
        "all                     0.0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
