--- a/notebooks/17-Deep-dive-GA01SUMO-SBD11-05-SPKIRB000.ipynb
+++ b/notebooks/17-Deep-dive-GA01SUMO-SBD11-05-SPKIRB000.ipynb
@@ -30,10 +30,8 @@
     "\n",
     "from ooi_data_explorations.common import list_methods, list_streams, get_annotations, add_annotation_qc_flags, load_kdata, get_vocabulary, update_dataset\n",
     "from ooi_data_explorations.uncabled.process_spkir import spkir_datalogger\n",
-    "\n",
-    "from ooinet import M2M # not sure if importing just M2M is correct/whether there is a class associated with this module\n",
-    "\n",
-    "from qartod_testing.plotting import nanfill_time_gaps"
+    "from ooinet.M2M import get_deployments\n",
+    "from qartod_testing.data_deep_dive import nanfill_time_gaps"
    ]
   },
   {
@@ -52,7 +50,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -192,7 +189,7 @@
    ],
    "source": [
     "# View deployment information\n",
-    "deployments = M2M.get_deployments(refdes)\n",
+    "deployments = get_deployments(refdes)\n",
     "deployments"
    ]
   },
