--- a/notebooks/06-Check-missing-suspect-flags.ipynb
+++ b/notebooks/06-Check-missing-suspect-flags.ipynb
@@ -20,7 +20,7 @@
     "import matplotlib.pyplot as plt\n",
     "import xarray as xr\n",
     "\n",
-    "from qartod_testing.data_processing import load_gross_range_qartod_test_values, load_climatology_qartod_test_values"
+    "from qartod_testing.local_qc_test import load_gross_range_qartod_test_values, load_climatology_qartod_test_values"
    ]
   },
   {
