Delete old reference designator from notebook

--- a/notebooks/07-Generate-Statistics-CSVs.ipynb
+++ b/notebooks/07-Generate-Statistics-CSVs.ipynb
@@ -57,7 +57,7 @@
    "outputs": [],
    "source": [
     "# Setup parameters needed to request data\n",
-    "refdes = \"GS01SUMO-RII11-02-PHSENE042\"\n",
+    "refdes = \"\"\n",
     "method = \"recovered_host\"\n",
     "stream = \"phsen_abcdef_imodem_instrument_recovered\"\n",
     "\n",
