--- a/notebooks/14-Deep-dive-GI01SUMO-RID16-08-SPKIRB000.ipynb
+++ b/notebooks/14-Deep-dive-GI01SUMO-RID16-08-SPKIRB000.ipynb
@@ -31,7 +31,7 @@
     "from ooi_data_explorations.common import list_methods, list_streams, get_annotations, add_annotation_qc_flags, load_kdata, get_vocabulary, update_dataset\n",
     "from ooi_data_explorations.uncabled.process_spkir import spkir_datalogger\n",
     "from ooinet.M2M import get_deployments\n",
-    "from qartod_testing.data_deep_dive import nanfill_time_gaps"
+    "from qartod_testing.data_deep_dive import nanfill_time_gaps, check_chla_swr"
    ]
   },
   {
