Continue SPKIR comparison with FLORT Chl-a and SWR

--- a/notebooks/13-Deep-dive-CP04OSSM-RID26-08-SPKIRB000.ipynb
+++ b/notebooks/13-Deep-dive-CP04OSSM-RID26-08-SPKIRB000.ipynb
@@ -48,6 +48,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set parameter for SPKIR comparison with FLORT Chl-a estimate\n",
+    "flort_node = 'RID27'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "tags": []
@@ -2145,7 +2155,7 @@
    ],
    "source": [
     "# Check behavior of shortwave irradiance and Chl-a during deployment\n",
-    "metbk, flort, fig, ax = check_chla_swr(spkir, site, deploy)"
+    "metbk, flort, fig, ax = check_chla_swr(spkir, site, deploy, flort_node)"
    ]
   },
   {
@@ -2900,7 +2910,7 @@
    ],
    "source": [
     "# Check behavior of shortwave irradiance and Chl-a during deployment\n",
-    "metbk, flort, fig, ax = check_chla_swr(spkir, site, deploy)"
+    "metbk, flort, fig, ax = check_chla_swr(spkir, site, deploy, flort_node)"
    ]
   },
   {
@@ -3655,7 +3665,7 @@
    ],
    "source": [
     "# Check behavior of shortwave irradiance and Chl-a during deployment\n",
-    "metbk, flort, fig, ax = check_chla_swr(spkir, site, deploy)"
+    "metbk, flort, fig, ax = check_chla_swr(spkir, site, deploy, flort_node)"
    ]
   },
   {
@@ -4410,7 +4420,7 @@
    ],
    "source": [
     "# Check behavior of shortwave irradiance and Chl-a during deployment\n",
-    "metbk, flort, fig, ax = check_chla_swr(spkir, site, deploy)"
+    "metbk, flort, fig, ax = check_chla_swr(spkir, site, deploy, flort_node)"
    ]
   },
   {
