Plot co-located FLORT chlorophyll concentration estimate with existing QC flags

--- a/notebooks/14-Deep-dive-GI01SUMO-RID16-08-SPKIRB000.ipynb
+++ b/notebooks/14-Deep-dive-GI01SUMO-RID16-08-SPKIRB000.ipynb
@@ -699,6 +699,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -720,10 +725,15 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
-    "### Deployment 3"
+    "### Deployment 3\n",
+    "\n",
+    "2nd brief period of sampling at end looks like biofouling\n",
+    "\n",
+    "To-do: look at co-located CTD since end of 1st brief period of sampling could be showing instrument issues"
    ]
   },
   {
@@ -1422,10 +1432,13 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
-    "### Deployment 5"
+    "### Deployment 5\n",
+    "\n",
+    "Need to check start of deployment and last month of deployment for biofouling"
    ]
   },
   {
@@ -2110,10 +2123,13 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
-    "### Deployment 6"
+    "### Deployment 6\n",
+    "\n",
+    "Check 2 months before NSIF powered down for a month for biofouling"
    ]
   },
   {
@@ -2812,10 +2828,13 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
-    "### Deployment 7"
+    "### Deployment 7\n",
+    "\n",
+    "In last couple of months might be seeing effects of UV lamp power pin corroding and gradual biofouling"
    ]
   },
   {
@@ -3514,10 +3533,13 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
-    "### Deployment 8"
+    "### Deployment 8\n",
+    "\n",
+    "I don't know that we necessarily need an annotation, but there is negative irradiance measured in the 683 nm channel."
    ]
   },
   {
@@ -4216,6 +4238,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
