Expand some sections and update scripts for report

--- a/notebooks/02-local-QARTOD-test.ipynb
+++ b/notebooks/02-local-QARTOD-test.ipynb
@@ -739,7 +739,6 @@
    "cell_type": "markdown",
    "id": "499a4f2e",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -817,7 +816,6 @@
    "cell_type": "markdown",
    "id": "9b119cdf",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -874,7 +872,9 @@
   {
    "cell_type": "markdown",
    "id": "25594bb3",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### Climatology Test"
    ]
