Work through air temperature comparison

--- a/notebooks/13-Deep-dive-CP04OSSM-RID26-08-SPKIRB000.ipynb
+++ b/notebooks/13-Deep-dive-CP04OSSM-RID26-08-SPKIRB000.ipynb
@@ -66,7 +66,8 @@
    "outputs": [],
    "source": [
     "# Set parameter for SPKIR internal temperature comparison with co-located CTDBP sea water temperature\n",
-    "ctdbp_node = 'RID27'"
+    "ctdbp_node = 'RID27'\n",
+    "ctdbp_sensor = '03-CTDBPC000'"
    ]
   },
   {
@@ -718,7 +719,9 @@
     "\n",
     "Internal temperature steeply increases ~4 degC within a day on 2017-03-19\n",
     "\n",
-    "The SPKIR internal temperature turned out to be very similar to the co-located CTDBP sea water temperature except for an offset and some of the day-to-day changes. The random prolonged drop in temperature that I was concerned about is also reflected in the sea water temperature time series. I guess I don't need an annotation for this one."
+    "The SPKIR internal temperature turned out to be very similar to the co-located CTDBP sea water temperature except for an offset and some of the day-to-day changes. The random prolonged drop in temperature that I was concerned about is also reflected in the sea water temperature time series. I guess I don't need an annotation for this one.\n",
+    "\n",
+    "I wasn't going to do anything else for this one, but I'm curious what all the other sensors were seeing at the same time, because I still find the sudden drop in water temperature in the CTD record odd. Was a different mass of water suddenly advected past the sensors? Did the winds change and mess with the normal dynamics of the area?"
    ]
   },
   {
@@ -1388,7 +1391,7 @@
    "source": [
     "# Compare SPKIR internal temperature time series to sea water temperature\n",
     "# to check that the instrument is performing as expected\n",
-    "ctdbp, fig, ax = compare_spkir_to_ctdbp(spkir, site, deploy, ctdbp_node)"
+    "ctdbp, fig, ax = compare_spkir_to_ctdbp(spkir, site, deploy, ctdbp_node, ctdbp_sensor)"
    ]
   },
   {
