Finish co-located temperature sensor review

--- a/notebooks/17-Deep-dive-GA01SUMO-SBD11-05-SPKIRB000.ipynb
+++ b/notebooks/17-Deep-dive-GA01SUMO-SBD11-05-SPKIRB000.ipynb
@@ -410,9 +410,11 @@
     "\n",
     "For the temperature comparison, the data is there, but it's very different. So maybe this confirms that an annotation is needed. Was this SPKIR deployed in air?\n",
     "\n",
-    "Ha. It was deployed in air, at 6 m above sea level. Which instrument has air temperature? METBK, and METBK B has the early 2015 air temperature. Plotting these two together works, but I'm not so sure what to make of this.\n",
+    "Ha. It was deployed in air, at 6 m above sea level. Which instrument has air temperature? METBK, and METBK B has the early 2015 air temperature.\n",
     "\n",
-    "I also plotted the difference between the temperatures, so that I could see how that offset between them changes while the SPKIR temperature, drastically drops. Still need to write up how I would interpret that."
+    "I also plotted the difference between the temperatures, so that I could see how that offset between them changes while the SPKIR temperature, drastically drops. \n",
+    "\n",
+    "We can clearly see how the gap between the two temperature time series closes after 19 Mar 2015. I think the tall spikes in the internal temperature sensor show the tendency for the instrument to heat up faster than the surrounding air. The last two days of data should maybe be flagged as suspect, but there was only about 5 days of data from this whole deployment so I would not be surprised if we choose to not use this deployment."
    ]
   },
   {
@@ -2504,9 +2506,11 @@
    "source": [
     "### Deployment 3\n",
     "\n",
-    "No temperature from NSIF CTD at the same time towards the end of the deployment.\n",
+    "I am now plotting the internal temperature with METBK B air temperature now that I know this SPKIR is in the air. The air temperature is much closer to the SPKIR internal temperature, but I don't see the same spikes that are in the SPKIR internal temperature. I would still mark those as suspect.\n",
     "\n",
-    "I am now plotting the internal temperature with METBK B air temperature now that I know this SPKIR is in the air. The air temperature is much closer to the SPKIR internal temperature, but I don't see the same spikes that are in the SPKIR internal temperature. I would still mark those as suspect."
+    "The SPKIR can overheat... but I think that is at some unreasonable temperature. I guess this speaks to its ability to heat much faster than the ambient air while above water in direct sunlight. Since the internal temperature quickly returns to a temperature closer to the METBK air temperature and these temperature spikes seem brief, I don't think they clearly indicate that the few concurrent irradiance data points should be considered suspect. I would not add an annotation for those points. \n",
+    "\n",
+    "We might still want to manually ignore the few points that are in the middle of larger gaps though."
    ]
   },
   {
