--- a/notebooks/19-Deep-dive-GS01SUMO-SBD11-05-SPKIRB000.ipynb
+++ b/notebooks/19-Deep-dive-GS01SUMO-SBD11-05-SPKIRB000.ipynb
@@ -358,9 +358,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
-    "### Deployment 2"
+    "### Deployment 2\n",
+    "\n",
+    "The odd data points in the middle of gaps should probably be annotated as \"gappy data\" so that we ignore these during the threshold table calculation process:\n",
+    "<ul>\n",
+    "    <li>The first week to first ten days of Sept 2016. </li>\n",
+    "    <li>From the second week of Nov 2016 to end of deployment. </li>\n",
+    "</ul>"
    ]
   },
   {
@@ -1052,9 +1061,17 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
-    "### Deployment 3"
+    "### Deployment 3\n",
+    "\n",
+    "The odd data points in the middle of gaps should probably be annotated as \"gappy data\" so that we ignore these during the threshold table calculation process:\n",
+    "<ul>\n",
+    "    <li>From mid Dec 2017 to the end of the deployment.</li>\n",
+    "</ul>"
    ]
   },
   {
