--- a/notebooks/13-Deep-dive-CP04OSSM-RID26-08-SPKIRB000.ipynb
+++ b/notebooks/13-Deep-dive-CP04OSSM-RID26-08-SPKIRB000.ipynb
@@ -712,6 +712,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
