--- a/notebooks/18-Deep-dive-GS01SUMO-RID16-08-SPKIRB000.ipynb
+++ b/notebooks/18-Deep-dive-GS01SUMO-RID16-08-SPKIRB000.ipynb
@@ -407,6 +407,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
