--- a/notebooks/02-local-QARTOD-test.ipynb
+++ b/notebooks/02-local-QARTOD-test.ipynb
@@ -74,9 +74,9 @@
    "outputs": [],
    "source": [
     "# Set reference designator, data stream, and method \n",
-    "refdes = \"GI01SUMO-RID16-03-CTDBPF000\"        \n",
+    "refdes = \"CP04OSSM-MFD35-06-PHSEND000\"        \n",
     "method = \"recovered_inst\"\n",
-    "stream = \"ctdbp_cdef_instrument_recovered\"\n",
+    "stream = \"phsen_abcdef_instrument\"\n",
     "\n",
     "# Get site, node, and sensor info from deconstructed reference designator\n",
     "[site, node, sensor] = refdes.split('-', 2)"
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "d0f14319-c62b-4e23-b22a-0f1f25789b73",
    "metadata": {
     "tags": []
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "c05b9f04-e190-4080-bc7c-40f94052bfc5",
    "metadata": {
     "tags": []
@@ -201,12 +201,18 @@
      "output_type": "stream",
      "text": [
       "Running local QARTOD gross_range test for deployment 02.\n",
-      "Running local QARTOD gross_range test for deployment 03.\n",
       "Running local QARTOD gross_range test for deployment 04.\n",
       "Running local QARTOD gross_range test for deployment 05.\n",
       "Running local QARTOD gross_range test for deployment 06.\n",
       "Running local QARTOD gross_range test for deployment 07.\n",
-      "Running local QARTOD gross_range test for deployment 08.\n"
+      "Running local QARTOD gross_range test for deployment 08.\n",
+      "Running local QARTOD gross_range test for deployment 09.\n",
+      "Running local QARTOD gross_range test for deployment 10.\n",
+      "Running local QARTOD gross_range test for deployment 11.\n",
+      "Running local QARTOD gross_range test for deployment 12.\n",
+      "Running local QARTOD gross_range test for deployment 13.\n",
+      "Running local QARTOD gross_range test for deployment 14.\n",
+      "Running local QARTOD gross_range test for deployment 15.\n"
      ]
     }
    ],
@@ -227,16 +233,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b3fc1916-e394-4941-9ec9-29b0a95c8d98",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running local QARTOD climatology test for deployment 02.\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Run local QARTOD climatology tests\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m save_local_qc_tests(file_paths, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mclimatology\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[4], line 17\u001b[0m, in \u001b[0;36msave_local_qc_tests\u001b[0;34m(file_paths, test_name)\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mRunning local QARTOD \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtest_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m test for deployment \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mdeployment\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m'\u001b[39m)  \n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(test_parameters) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m---> 17\u001b[0m     qc_test_results \u001b[38;5;241m=\u001b[39m \u001b[38;5;28meval\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrun_qartod_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtest_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m(refdes, stream, test_parameters, deploy_ds)\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     18\u001b[0m     qc_test_results \u001b[38;5;241m=\u001b[39m timeseries_dict_to_xarray(qc_test_results, deploy_ds)\n\u001b[1;32m     19\u001b[0m     \u001b[38;5;66;03m# Add variable containing deployment number used in sorting and merging overlapping deployments\u001b[39;00m\n",
+      "File \u001b[0;32m<string>:1\u001b[0m\n",
+      "File \u001b[0;32m~/code/qartod_testing/qartod_testing/local_qc_test.py:221\u001b[0m, in \u001b[0;36mrun_qartod_climatology\u001b[0;34m(refdes, stream, test_parameters, ds)\u001b[0m\n\u001b[1;32m    218\u001b[0m         \u001b[38;5;66;03m# print([pmin, pmax])\u001b[39;00m\n\u001b[1;32m    219\u001b[0m \u001b[38;5;66;03m# Run the climatology test\u001b[39;00m\n\u001b[1;32m    220\u001b[0m time \u001b[38;5;241m=\u001b[39m ds[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtime\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mto_numpy()\n\u001b[0;32m--> 221\u001b[0m param_results \u001b[38;5;241m=\u001b[39m climatology_test(c,\n\u001b[1;32m    222\u001b[0m                                 inp\u001b[38;5;241m=\u001b[39mds[param],\n\u001b[1;32m    223\u001b[0m                                 tinp\u001b[38;5;241m=\u001b[39mtime,\n\u001b[1;32m    224\u001b[0m                                 zinp\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mfull_like(ds[param], np\u001b[38;5;241m.\u001b[39mnan))\n\u001b[1;32m    225\u001b[0m \u001b[38;5;66;03m# param_results = climatology_test(c,\u001b[39;00m\n\u001b[1;32m    226\u001b[0m \u001b[38;5;66;03m#                                 inp=ds[param],\u001b[39;00m\n\u001b[1;32m    227\u001b[0m \u001b[38;5;66;03m#                                 tinp=time,\u001b[39;00m\n\u001b[1;32m    228\u001b[0m \u001b[38;5;66;03m#                                 zinp=ds['sea_water_pressure'])\u001b[39;00m\n\u001b[1;32m    229\u001b[0m \n\u001b[1;32m    230\u001b[0m \u001b[38;5;66;03m# Append the results to the end of the dictionary\u001b[39;00m\n\u001b[1;32m    231\u001b[0m climatology_results\u001b[38;5;241m.\u001b[39mupdate({\n\u001b[1;32m    232\u001b[0m     param: param_results\n\u001b[1;32m    233\u001b[0m })\n",
+      "File \u001b[0;32m~/.conda/envs/qartod_test/lib/python3.11/site-packages/ioos_qc/qartod.py:456\u001b[0m, in \u001b[0;36mclimatology_test\u001b[0;34m(config, inp, tinp, zinp)\u001b[0m\n\u001b[1;32m    453\u001b[0m inp \u001b[38;5;241m=\u001b[39m inp\u001b[38;5;241m.\u001b[39mflatten()\n\u001b[1;32m    454\u001b[0m zinp \u001b[38;5;241m=\u001b[39m zinp\u001b[38;5;241m.\u001b[39mflatten()\n\u001b[0;32m--> 456\u001b[0m flag_arr \u001b[38;5;241m=\u001b[39m config\u001b[38;5;241m.\u001b[39mcheck(tinp, inp, zinp)\n\u001b[1;32m    457\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m flag_arr\u001b[38;5;241m.\u001b[39mreshape(original_shape)\n",
+      "File \u001b[0;32m~/.conda/envs/qartod_test/lib/python3.11/site-packages/ioos_qc/qartod.py:394\u001b[0m, in \u001b[0;36mClimatologyConfig.check\u001b[0;34m(self, tinp, inp, zinp)\u001b[0m\n\u001b[1;32m    391\u001b[0m suspect_idx \u001b[38;5;241m=\u001b[39m (inp \u001b[38;5;241m<\u001b[39m m\u001b[38;5;241m.\u001b[39mvspan\u001b[38;5;241m.\u001b[39mminv) \u001b[38;5;241m|\u001b[39m (inp \u001b[38;5;241m>\u001b[39m m\u001b[38;5;241m.\u001b[39mvspan\u001b[38;5;241m.\u001b[39mmaxv)\n\u001b[1;32m    393\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m np\u001b[38;5;241m.\u001b[39merrstate(invalid\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mignore\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m--> 394\u001b[0m     flag_arr[(values_idx \u001b[38;5;241m&\u001b[39m fail_idx)] \u001b[38;5;241m=\u001b[39m QartodFlags\u001b[38;5;241m.\u001b[39mFAIL\n\u001b[1;32m    395\u001b[0m     flag_arr[(values_idx \u001b[38;5;241m&\u001b[39m \u001b[38;5;241m~\u001b[39mfail_idx \u001b[38;5;241m&\u001b[39m suspect_idx)] \u001b[38;5;241m=\u001b[39m QartodFlags\u001b[38;5;241m.\u001b[39mSUSPECT\n\u001b[1;32m    396\u001b[0m     flag_arr[(values_idx \u001b[38;5;241m&\u001b[39m \u001b[38;5;241m~\u001b[39mfail_idx \u001b[38;5;241m&\u001b[39m \u001b[38;5;241m~\u001b[39msuspect_idx)] \u001b[38;5;241m=\u001b[39m QartodFlags\u001b[38;5;241m.\u001b[39mGOOD\n",
+      "File \u001b[0;32m~/.conda/envs/qartod_test/lib/python3.11/contextlib.py:81\u001b[0m, in \u001b[0;36mContextDecorator.__call__.<locals>.inner\u001b[0;34m(*args, **kwds)\u001b[0m\n\u001b[1;32m     78\u001b[0m \u001b[38;5;129m@wraps\u001b[39m(func)\n\u001b[1;32m     79\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21minner\u001b[39m(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds):\n\u001b[1;32m     80\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_recreate_cm():\n\u001b[0;32m---> 81\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m func(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds)\n",
+      "File \u001b[0;32m~/.conda/envs/qartod_test/lib/python3.11/site-packages/numpy/ma/core.py:3387\u001b[0m, in \u001b[0;36mMaskedArray.__setitem__\u001b[0;34m(self, indx, value)\u001b[0m\n\u001b[1;32m   3384\u001b[0m     mval \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mtuple\u001b[39m([\u001b[38;5;28;01mFalse\u001b[39;00m] \u001b[38;5;241m*\u001b[39m \u001b[38;5;28mlen\u001b[39m(_dtype\u001b[38;5;241m.\u001b[39mnames))\n\u001b[1;32m   3385\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m _mask \u001b[38;5;129;01mis\u001b[39;00m nomask:\n\u001b[1;32m   3386\u001b[0m     \u001b[38;5;66;03m# Set the data, then the mask\u001b[39;00m\n\u001b[0;32m-> 3387\u001b[0m     _data[indx] \u001b[38;5;241m=\u001b[39m dval\n\u001b[1;32m   3388\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m mval \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m nomask:\n\u001b[1;32m   3389\u001b[0m         _mask \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_mask \u001b[38;5;241m=\u001b[39m make_mask_none(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mshape, _dtype)\n",
+      "\u001b[0;31mIndexError\u001b[0m: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices"
+     ]
+    }
+   ],
    "source": [
     "# Run local QARTOD climatology tests\n",
     "save_local_qc_tests(file_paths, \"climatology\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0500caf6-29d5-40fb-ac54-04145aaea660",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
