Clean up local_qc_test functions and notebook documentation

--- a/notebooks/02-local-QARTOD-test.ipynb
+++ b/notebooks/02-local-QARTOD-test.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Run QARTOD Test on Locally Saved Data\n",
     "\n",
-    "In this notebook we will load locally saved data from the external data folder, extract QARTOD test parameters from spreadsheets on the OOI GitHub, run the QARTOD climatology and gross range tests on the imported data, and save the test results to the interim data folder.\n",
+    "In this notebook we use the paths to locally saved data in the external data folder to extract QARTOD test parameters, download parameter thresholds on the OOI GitHub, run the QARTOD climatology and gross range tests on the imported data, and save the test results to the interim data folder.\n",
     "\n",
     "More info about QARTOD tests and the ioos_qc module can be found from the [Integrated Ocean Observing System website](https://ioos.noaa.gov/project/qartod/) and [Python module documentation](https://ioos.github.io/ioos_qc/), respectively."
    ]
@@ -17,7 +17,7 @@
    "id": "f9f95658",
    "metadata": {},
    "source": [
-    "### Import modules for data manipulation"
+    "### Import modules for local QC test"
    ]
   },
   {
@@ -31,29 +31,12 @@
    "source": [
     "# Import libraries\n",
     "import os\n",
-    "import requests\n",
-    "import re\n",
-    "import gc\n",
-    "import io\n",
-    "import ast\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import xarray as xr\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
-    "import sys\n",
     "import glob\n",
     "\n",
-    "# Import dask tools and ProgressBar\n",
-    "import dask\n",
-    "from dask.diagnostics import ProgressBar\n",
-    "\n",
     "# Import qartod_testing project functions\n",
-    "from qartod_testing.qc_flag_statistics import \\\n",
-    "    timeseries_dict_to_xarray, build_data_path, get_test_parameters, \\\n",
-    "    get_deployment_ds\n",
-    "from qartod_testing.local_qc_test import run_qartod_gross_range, \\\n",
-    "    run_qartod_climatology"
+    "from qartod_testing.local_qc_test import save_local_qc_tests"
    ]
   },
   {
@@ -61,7 +44,7 @@
    "id": "7ca8706f",
    "metadata": {},
    "source": [
-    "### Load locally saved data"
+    "### Find locally saved data downloaded from OOINet"
    ]
   },
   {
@@ -76,10 +59,7 @@
     "# Set reference designator, data stream, and method \n",
     "refdes = \"GA03FLMB-RIS01-04-PHSENF000\"        \n",
     "method = \"recovered_inst\"\n",
-    "stream = \"phsen_abcdef_instrument\"\n",
-    "\n",
-    "# Get site, node, and sensor info from deconstructed reference designator\n",
-    "[site, node, sensor] = refdes.split('-', 2)"
+    "stream = \"phsen_abcdef_instrument\""
    ]
   },
   {
@@ -102,80 +82,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "499a4f2e",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "### Identify Test Parameters\n",
-    "\n",
-    "Next, identify which parameters in the dataset have QARTOD applied to them. Sometimes the variable name in the dataset is different that the key that is used by OOINet to build the datasets. For that we can check the attributes of the variable for the \"alternate_parameter_name\"!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fdcd8646",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "### Collect test QARTOD lookup value tables from GitHub\n",
-    "We can grab the QARTOD tables with the test values straight from GitHub, which ensures we are using the same input and threshold values as OOINet. However, the QARTOD tables utilize the ```ooinet_parameter_name``` instead of the dataset variable name. Thus, when loading the tables we need to make sure we are requesting the correct parameter name.\n",
-    "\n",
-    "Note to Self: This section should probably be deleted altogether since importing lookup table values is done within the QARTOD test functions."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "41730a86-7f72-4629-ab63-eb8825b7dfda",
    "metadata": {
     "tags": []
    },
    "source": [
     "### Run QARTOD tests locally\n",
-    "Next, we run the gross range test locally to get local results that can be compared with the output from the tests. This is done using the ```ioos_qc``` QARTOD package in conjunction with the ```qartod_test_values``` tables."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "d0f14319-c62b-4e23-b22a-0f1f25789b73",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def save_local_qc_tests(file_paths, test_name):\n",
-    "    \"\"\"\n",
-    "    \"\"\"\n",
-    "    # Create copy of list of file paths for loading multi-file, single-deployment datasets\n",
-    "    paths_copy = file_paths.copy()\n",
-    "    \n",
-    "    while len(paths_copy) > 0:\n",
-    "        # Load data from a single deployment\n",
-    "        deploy_ds, deployment, paths_copy = get_deployment_ds(paths_copy) \n",
-    "    \n",
-    "        # Create a dictionary of key-value pairs of dataset variable name:alternate parameter name\n",
-    "        test_parameters = get_test_parameters(deploy_ds)\n",
-    "        \n",
-    "        # Run local QARTOD test\n",
-    "        print(f'Running local QARTOD {test_name} test for deployment {deployment}.')  \n",
-    "        if len(test_parameters) > 0:\n",
-    "            qc_test_results = eval(f'run_qartod_{test_name}(refdes, stream, test_parameters, deploy_ds)')\n",
-    "            qc_test_results = timeseries_dict_to_xarray(qc_test_results, deploy_ds)\n",
-    "            # Add variable containing deployment number used in sorting and merging overlapping deployments\n",
-    "            qc_test_results['deployment'] = deploy_ds['deployment']\n",
-    "        else:\n",
-    "            pass\n",
-    "\n",
-    "        # Build file name and directory for local QARTOD test results\n",
-    "        folder_path = os.path.join(os.path.abspath('../data/interim'), method, stream, refdes)\n",
-    "        os.makedirs(folder_path, exist_ok=True)\n",
-    "        test_results_path = os.path.join(folder_path, f\"{test_name}_test-deployment00{deployment}.nc\")\n",
-    "\n",
-    "        # Save local test results\n",
-    "        qc_test_results.to_netcdf(test_results_path, mode='w')\n",
-    "    return"
+    "Next, we run the QC tests locally to get our own (\"local\") results that can be compared with the production (\"expected\") results from the datasets downloaded from OOINet. This is done using the climatology or gross range tests from the ```ioos_qc``` QARTOD package in conjunction with the ```qartod_test_values``` tables on the oceanobservatories/qc-lookup repository on GitHub. All of the requests for the lookup tables are done within our functions to configure and run the local tests. ```save_local_qc_tests``` will identify which parameters in the dataset have QARTOD applied to them from variable names that contain ```qartod_executed``` to run the local tests on just these parameters."
    ]
   },
   {
@@ -190,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "c05b9f04-e190-4080-bc7c-40f94052bfc5",
    "metadata": {
     "tags": []
@@ -208,7 +121,7 @@
    ],
    "source": [
     "# Run local QARTOD gross range tests\n",
-    "save_local_qc_tests(file_paths, \"gross_range\")"
+    "save_local_qc_tests(file_paths, refdes, stream, method, \"gross_range\")"
    ]
   },
   {
@@ -223,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "b3fc1916-e394-4941-9ec9-29b0a95c8d98",
    "metadata": {
     "tags": []
@@ -241,7 +154,7 @@
    ],
    "source": [
     "# Run local QARTOD climatology tests\n",
-    "save_local_qc_tests(file_paths, \"climatology\")"
+    "save_local_qc_tests(file_paths, refdes, stream, method, \"climatology\")"
    ]
   },
   {
