Check data to be annotated with time series

--- a/notebooks/15-Deep-dive-GI01SUMO-SBD11-05-SPKIRB000.ipynb
+++ b/notebooks/15-Deep-dive-GI01SUMO-SBD11-05-SPKIRB000.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -5454,6 +5454,105 @@
     "# 5-day median of downwelling spectral irradiance pcolormesh plot with log-scale cmap except for [0, 0.01] which is linear\n",
     "xr.plot.pcolormesh(downwelling_irradiance, x=\"time\", y=\"spectra\", cmap='magma', figsize=(15,5), norm=colors.SymLogNorm(linthresh=0.1))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Check annotations to be added with time series\n",
+    "\n",
+    "I added this set of cells to the notebook for checking annotations, but it turns out that I will not be adding any annotations that will affect this datastream."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Set method and stream strings\n",
+    "method = methods[0]\n",
+    "stream = streams[method][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading 17 data file(s) from the local kdata directory\n",
+      "Loading and Processing Data Files: 100%|██████████| 17/17 [00:59<00:00,  3.48s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Request annotations and load data from the local kdata directory \n",
+    "annotations = get_annotations(site, node, sensor)\n",
+    "annotations = pd.DataFrame(annotations)\n",
+    "spkir = load_kdata(site, node, sensor, method, stream, ('*SPKIR*.nc'))\n",
+    "spkir = spkir_datalogger(spkir, burst=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Add qc flags for annotations retrieved above\n",
+    "if not annotations.empty:\n",
+    "    # create an annotation-based quality flag\n",
+    "    spkir = add_annotation_qc_flags(spkir, annotations)\n",
+    "\n",
+    "    # clean-up the data, removing values that were marked as fail either from the quality checks or in the\n",
+    "    # annotations\n",
+    "    spkir = spkir.where(spkir.rollup_annotations_qc_results < 4) # flags from annotations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Check structure of edited data and contents\n",
+    "vocab = get_vocabulary(site, node, sensor)[0]\n",
+    "spkir = update_dataset(spkir, vocab['maxdepth'])\n",
+    "spkir['time'] = pd.to_datetime(spkir.time, unit='s')\n",
+    "spkir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Plot one SPKIR parameter with data where new annotations added in red\n",
+    "spkir.downwelling_irradiance_555.squeeze().plot()\n",
+    "spkir.downwelling_irradiance_555.sel(time=slice(\"2017-01-09T18:15:00\", \"2017-07-28T12:00:00\")).plot(c=\"r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
