Check ADCP data from Pioneer MAB

--- a/notebooks/21-Explore-ADCP-data-on-OOINet.ipynb
+++ b/notebooks/21-Explore-ADCP-data-on-OOINet.ipynb
@@ -54,7 +54,7 @@
      "data": {
       "text/plain": [
        "['MFC31',\n",
-       " 'MFD35',\n",
+       " 'MFD36',\n",
        " 'MFD37',\n",
        " 'RIC21',\n",
        " 'RID26',\n",
@@ -72,12 +72,12 @@
    "source": [
     "# Request a list of subsites\n",
     "# list_sites()\n",
-    "list_nodes('CP04OSSM')"
+    "list_nodes('CP11SOSM') # Central surface mooring at MAB"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "339a6499-003b-40fb-8b29-7f905d8c9c1a",
    "metadata": {
     "tags": []
@@ -87,47 +87,36 @@
      "data": {
       "text/plain": [
        "['00-DCLENG000',\n",
-       " '01-ADCPSJ000',\n",
-       " '02-PRESFC000',\n",
-       " '04-VELPTB000',\n",
-       " '05-PCO2WB000',\n",
-       " '06-PHSEND000']"
+       " '01-OPTAAD000',\n",
+       " '02-ADCPTQ000',\n",
+       " '03-CTDBPC000',\n",
+       " '04-DOSTAD000',\n",
+       " '07-ZPLSCC000']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Request sensors at a node\n",
-    "list_sensors('CP04OSSM','MFD35')"
+    "list_sensors('CP10CNSM','MFD37')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "24c15605-c834-4511-97c4-d3a5945cc6a9",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['recovered_host', 'recovered_inst', 'telemetered']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Pick a refdes\n",
-    "site = 'CP04OSSM'\n",
-    "node = 'MFD35'\n",
-    "sensor = '01-ADCPSJ000' # 75 kHz LongRanger Sentinel\n",
+    "site = 'CP10CNSM'\n",
+    "node = 'MFD37'\n",
+    "sensor = '02-ADCPTQ000' # I think this is a new OOI series for MAB\n",
     "\n",
     "# Request data recovery methods for this refdes\n",
     "list_methods(site, node, sensor)"
@@ -135,23 +124,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "b99d289a-3ddd-47f7-b164-85346c1d75de",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['adcp_config', 'adcp_engineering', 'adcp_velocity_earth']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Pick a method\n",
     "method = 'recovered_inst'\n",
